<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.timer-err</groupId>
    <artifactId>qml4j-parent</artifactId>
    <version>0.1.1</version>
    <packaging>pom</packaging>

    <name>qml4j</name>
    <description>QML parsing, JIT bytecode compilation and Skia rendering in pure Java.</description>
    <url>https://github.com/TIMER-err/qml4j</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>TIMER-err</id>
            <name>TIMER-err</name>
            <url>https://github.com/TIMER-err</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/TIMER-err/qml4j.git</connection>
        <developerConnection>scm:git:git@github.com:TIMER-err/qml4j.git</developerConnection>
        <url>https://github.com/TIMER-err/qml4j</url>
    </scm>

    <properties>
        <!-- release=8 makes javac reject any JDK 9+ API at compile time, so the
             published bytecode is genuinely Java 8 compatible. Tests run on the build
             JDK and may use newer API. -->
        <maven.compiler.release>8</maven.compiler.release>
        <maven.compiler.testRelease>11</maven.compiler.testRelease>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <skija.version>0.143.16</skija.version>
        <antlr.version>4.13.2</antlr.version>
        <asm.version>9.7</asm.version>
        <r8.version>8.13.17</r8.version>
        <junit.version>5.10.3</junit.version>
        <lwjgl.version>3.3.3</lwjgl.version>
        <lwjgl.natives>natives-linux</lwjgl.natives>
    </properties>

    <modules>
        <module>qml4j-core</module>
        <module>qml4j-demo-desktop</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.timer-err</groupId>
                <artifactId>qml4j-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>${antlr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-util</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.humbleui</groupId>
                <artifactId>skija-shared</artifactId>
                <version>${skija.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.humbleui</groupId>
                <artifactId>skija-linux-x64</artifactId>
                <version>${skija.version}</version>
            </dependency>

            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>${lwjgl.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-maven-plugin</artifactId>
                    <version>${antlr.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- RECODE regression guard: fail the build on dead/redundant imports
                 and unused local variables (config/checkstyle/checkstyle.xml). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <configLocation>${maven.multiModuleProjectDirectory}/config/checkstyle/checkstyle.xml</configLocation>
                    <!-- Hand-written sources only; ANTLR-generated parser is excluded. -->
                    <sourceDirectories>
                        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                    </sourceDirectories>
                    <testSourceDirectories>
                        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
                    </testSourceDirectories>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <failOnViolation>true</failOnViolation>
                    <violationSeverity>warning</violationSeverity>
                    <consoleOutput>true</consoleOutput>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle-guard</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- `mvn -Prelease deploy` builds source+javadoc jars, GPG-signs everything,
         and uploads the bundle to the Central Portal. Plain `mvn install` stays
         fast (no signing/javadoc). Requires a `central` server in settings.xml
         and a GPG key on a public keyserver. -->
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.6.3</version>
                        <configuration>
                            <doclint>none</doclint>
                            <failOnError>false</failOnError>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.10.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                            <waitUntil>validated</waitUntil>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
